--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,12 +26,10 @@
         tools:targetApi="tiramisu" >
         <activity
             android:name=".ui.login.AuthActivity"
-            android:exported="false"
-            android:noHistory="true"/>
+            android:exported="false"/>
         <activity
             android:name=".ui.entry.EntryActivity"
-            android:exported="true"
-            android:noHistory="true" >
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,8 +38,7 @@
         </activity>
         <activity
             android:name=".ui.main.MainActivity"
-            android:exported="false"
-            android:noHistory="true"/>
+            android:exported="false"/>
     </application>
 
 </manifest>
