--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,12 @@
         tools:targetApi="tiramisu" >
         <activity
             android:name=".ui.login.AuthActivity"
-            android:exported="false"/>
+            android:exported="false"
+            android:configChanges="uiMode|locale"/>
         <activity
             android:name=".ui.entry.EntryActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:configChanges="uiMode|locale">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,7 +40,17 @@
         </activity>
         <activity
             android:name=".ui.main.MainActivity"
-            android:exported="false"/>
+            android:exported="false"
+            android:configChanges="uiMode|locale"/>
+
+        <service
+            android:name="androidx.appcompat.app.AppLocalesMetadataHolderService"
+            android:enabled="false"
+            android:exported="false">
+            <meta-data
+                android:name="autoStoreLocales"
+                android:value="true" />
+        </service>
     </application>
 
 </manifest>
